basic game logic + button, score + suffle

--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
     <h1>Memory Game</h1>
   </header>
   <nav>
-    <button type="button" id="reset" onclick="resetRound()">Reset!</button>
+    <button type="button" id="reset" onclick="resetRoundAndSuffle()">Reset!</button>
     <a href="#">Instructions</a>
     <a href="#">Game</a>
     <div class="score" id="score">* Score: 0</div>
